Added per user Vault Encryption. Encryption now works regardless of file type. You can view any encrypted file type from within the application, it will open the temporarily decrypted file based on what file type it is. Fixed it so that it launches based on the Resource folder rather than the drive folder whoops